admission/ValidatingAdmissionPolicy/policies/startupprobe-httpget-host/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: startupprobe-httpget-host-containers
  annotations:
    kubeapt.io/uuid: "746eed3b-2e17-4742-9a68-71458f5b6e3b"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    startupProbe:
      httpGet:
        path: /
        port: 80
        host: 127.0.0.1
